[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tirana-pipeline"
version = "0.2.0"
description = "Dagster pipeline for Tirana transit coverage analysis"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "dagster-duckdb>=0.23",
    "duckdb>=1.1",
    "geopandas>=0.14",
    "shapely>=2.0",
    "osmnx>=1.9",
    "gtfs-kit>=6.0",
    "pandas>=2.0",
    "requests>=2.31",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
